workloads/litmus-doc/litmusdocs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litmusdoc
  namespace: litmus-doc
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: litmusdoc
  template:
    metadata:
      labels:
        app: litmusdoc
    spec:
      containers:
      - name: litmusdoc
        image: mayadataio/litmus-docs:master-9be179
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: mayadatasecret2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: litmusdoc
  name: litmusdoc-service
  namespace: litmus-doc
spec:
  ports:
  - name: litmusdoc
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: litmusdoc
