workloads/litmus-doc/staging-litmusdocs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-litmusdoc
  namespace: litmus-doc
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-litmusdoc
  template:
    metadata:
      labels:
        app: staging-litmusdoc
    spec:
      containers:
      - name: staging-litmusdoc
        image: mayadataio/stage-litmus-docs:staging-df6a34
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: mayadatasecret2
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: staging-litmusdoc
  name: staging-litmusdoc-service
  namespace: litmus-doc
spec:
  ports:
  - name: staging-litmusdoc
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: staging-litmusdoc
