workloads/litmus-doc/v0.5-docs-litmus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v0-5-0litmusdoc
  namespace: litmus-doc
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v0-5-0litmusdoc
  template:
    metadata:
      labels:
        app: v0-5-0litmusdoc
    spec:
      containers:
      - name: v0-5-0litmusdoc
        image: mayadataio/litmus-docs:master-b87eea
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: mayadatasecret2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: v0-5-0litmusdoc
  name: v0-5-0litmusdoc-service
  namespace: litmus-doc
spec:
  ports:
  - name: v0-5-0litmusdoc
    port: 80
    protocol: TCP
  selector:
    app: v0-5-0litmusdoc
