workloads/litmus-doc/litmus-doc-prod-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-litmus-website-cluster
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/tls-acme: "true"
    fluxcd.io/automated: "true"
    nginx.org/server-snippets: "gzip on;"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: dashboard-ingress-prod
  namespace: litmus-doc
spec:
  rules:
  - host: docs.litmuschaos.io
    http:
      paths:
      - backend:
          serviceName: litmusdoc-service
          servicePort: 80
        path: "/(.*)"
      - backend:
          serviceName: v0-5-0litmusdoc-service
          servicePort: 80
        path: "/v050/(.*)"
      - backend:
          serviceName: stage-litmus-openebs-docs-svc
          servicePort: 80
        path: "/stage-litmus-openebs-docs/(.*)"
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: "/echo/(.*)"
  tls:
  - hosts:
    - docs.litmuschaos.io
    secretName: litmus-docs-prod
