workloads/litmus-doc/litmus-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-litmus-website-cluster
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/tls-acme: "true"
    nginx.org/server-snippets: "gzip on;"
    nginx.ingress.kubernetes.io/ssl-redirect: "True"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: dashboard-ingress
  namespace: litmus-doc
spec:
  rules:
  - host: staging-docs.litmuschaos.io
    http:
      paths:
      - backend:
          serviceName: staging-litmusdoc-service
          servicePort: 80
        path: "/(.*)"
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: "/echo/(.*)"
  tls:
  - hosts:
    - staging-docs.litmuschaos.io
    secretName: litmus-docs-ssl
