workloads/litmus-doc/v1-litmus-docs-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-litmus-website-cluster
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # kubernetes.io/tls-acme: "true"
    nginx.org/server-snippets: "gzip on;"
    # nginx.ingress.kubernetes.io/ssl-redirect: "True"
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # acme.cert-manager.io/http01-edit-in-place: "true"
  name: v1-litmus-docs-ingress
  namespace: litmus-doc
spec:
  rules:
    - # host: v1-docs.litmuschaos.io
      http:
        paths:
          - backend:
              serviceName: v1-litmusdoc-service
              servicePort: 80
            path: "/(.*)"
  # tls:
  #   - hosts:
  #       - v1-docs.litmuschaos.io
  #     secretName: v1-litmus-docs-ssl
